--- a/project1.htm
+++ b/project1.htm
@@ -29,12 +29,12 @@
                 <span class="col-3 input-group-text">
                     Timeshift
                 </span>
-                <input type="text" id="timeShift" class="form-control" value="300">
+                <input type="text" id="timeShift" class="form-control" value="1">
 
             </div>
             <div class="d-flex justify-content-around">
                 <input type="button" id="inputModeButton" class="inputButtonClass btn btn-primary" value="включить компас" data-bs-toggle="button" autocomplete="off" onclick="switchToDevori()">
-                <input type="button" id="inputPilotButton" class="inputButtonClass btn btn-primary border border-5 border-secondary" value="запустить слежку" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()" >
+                <input type="button" id="inputPilotButton" class="inputButtonClass btn btn-primary" value="запустить слежку" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()" >
 
             </div>
 <!--             <div class="inputContainerClass">
