--- a/project1.htm
+++ b/project1.htm
@@ -35,9 +35,9 @@
             <div class="d-flex justify-content-around">
                 <input type="button" id="inputModeButton" class="inputButtonClass btn btn-primary" value="включить компас" data-bs-toggle="button" autocomplete="off" onclick="switchToDevori()">
                 <!-- <input type="button" id="inputPilotButton" class="inputButtonClass btn btn-primary" value="запустить слежку" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()" > -->
-                <button class="inputButtonClass btn btn-primary">
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                    Loading...
+                <button class="inputButtonClass btn btn-primary" id="inputPilotButton" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()">
+                    <span class="spinner-border spinner-border-sm visually-hidden" role="status" aria-hidden="true"></span>
+                    <span id="inputPilotButtonText">запустить слежку</span>
                 </button>
 
 
