change time of pilot to last seen & find last data method

--- a/project1.htm
+++ b/project1.htm
@@ -27,7 +27,7 @@
             </div>
             <div class="input-group mb-2">
                 <span class="col-3 input-group-text">
-                    Timeshift
+                    Окно
                 </span>
                 <input type="text" id="timeShift" class="form-control" value="1">
 
@@ -79,7 +79,7 @@
                     <div>расстояние, км</div>
                     <div>направление, гр.</div>
                     <div>дата наблюдения</div>
-                    <div>данные от</div>
+                    <div>давность данных</div>
                     <div>точн. GPS тел., м.</div>
 <!--                     <div>gpsHeading</div>
                     <div>devOriHeading</div>
