--- a/project1.htm
+++ b/project1.htm
@@ -33,7 +33,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.2</h6>
+                <h6>Shlyapa web v.1.0.2a</h6>
             </div>
             <div class="input-group mb-2">
                 <span class="col-3 input-group-text">
@@ -88,6 +88,7 @@
                     <div class="noDataClass" id="lastSeenDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="lastSeenAgo">00s</div>
                     <div class="noDataClass" id="accuracy">00</div>
+                    <a id="linkToMap" href="" target="">openstreet</a>
 
                 </div>
         </div>
