added link to OSM

--- a/project1.htm
+++ b/project1.htm
@@ -33,7 +33,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.2a</h6>
+                <h6>Shlyapa web v.1.0.2b</h6>
             </div>
             <div class="input-group mb-2">
                 <span class="col-3 input-group-text">
@@ -75,6 +75,7 @@
                     <div>дата посл. данных</div>
                     <div>давность данных</div>
                     <div>точн. GPS тел., м.</div>
+                    <a id="linkToMap" href="">link to OSM</a>
 
                 </div >
                 <div class="col-6">
@@ -88,7 +89,7 @@
                     <div class="noDataClass" id="lastSeenDate">00-00-0000 00:00:00</div>
                     <div class="noDataClass" id="lastSeenAgo">00s</div>
                     <div class="noDataClass" id="accuracy">00</div>
-                    <a id="linkToMap" href="" target="">openstreet</a>
+                    <a id="linkToMapVelo" href="" >link to OSM velo</a>
 
                 </div>
         </div>
