inital commit scss

--- a/project1.htm
+++ b/project1.htm
@@ -54,7 +54,7 @@
                     <span id="modeButtonText">включить компас</span>
                 </button>
                 <!-- <input type="button" id="inputPilotButton" class="inputButtonClass btn btn-primary" value="запустить слежку" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()" > -->
-                <button class="inputButtonClass btn btn-primary" id="inputPilotButton" onclick="inputPilot()">
+                <button class="inputButtonClass btn btn-primary shadow" id="inputPilotButton" onclick="inputPilot()">
                     <span class="spinner-border spinner-border-sm visually-hidden" id="inputButtonSpinner" role="status" aria-hidden="true"></span>
                     <span id="inputPilotButtonText">запустить слежку</span>
                 </button>
