added search cancellation, exception handle

--- a/project1.htm
+++ b/project1.htm
@@ -33,7 +33,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.2b</h6>
+                <h6>Shlyapa web v.1.0.3</h6>
             </div>
             <div class="input-group mb-2">
                 <span class="col-3 input-group-text">
@@ -49,11 +49,11 @@
 
             </div>
             <div class="d-flex justify-content-around">
-                <!-- <input type="button" id="inputModeButton" class="inputButtonClass btn btn-primary" value="включить компас" data-bs-toggle="button" autocomplete="off" onclick="switchToDevori()"> -->
+
                 <button class="inputButtonClass btn btn-primary" id="inputModeButton" onclick="switchToDevori()">
                     <span id="modeButtonText">включить компас</span>
                 </button>
-                <!-- <input type="button" id="inputPilotButton" class="inputButtonClass btn btn-primary" value="запустить слежку" data-bs-toggle="button" autocomplete="off" onclick="inputPilot()" > -->
+
                 <button class="inputButtonClass btn btn-primary" id="inputPilotButton" onclick="inputPilot()">
                     <span class="spinner-border spinner-border-sm visually-hidden" id="inputButtonSpinner" role="status" aria-hidden="true"></span>
                     <span id="inputPilotButtonText">запустить слежку</span>
@@ -75,7 +75,7 @@
                     <div>дата посл. данных</div>
                     <div>давность данных</div>
                     <div>точн. GPS тел., м.</div>
-                    <a id="linkToMap" href="">link to OSM</a>
+                    <a id="linkToGoogleMap" href="">link to Google sat</a>
 
                 </div >
                 <div class="col-6">
