fixing google maps link

--- a/project1.htm
+++ b/project1.htm
@@ -33,7 +33,7 @@
     <div class="container firstLevelContainer">
         <div class="inputPilotClass row">
             <div class="headerClass">
-                <h6>Shlyapa web v.1.0.3</h6>
+                <h6>Shlyapa web v.1.0.3a</h6>
             </div>
             <div class="input-group mb-2">
                 <span class="col-3 input-group-text">
